feat: 브랜드 변경

--- a/blog/2024-12-05-welcome.mdx
+++ b/blog/2024-12-05-welcome.mdx
@@ -1,14 +1,14 @@
 ---
 slug: welcome
 title: 주인장의 첫인사
-authors: [바른생각]
+authors: [H]
 tags: [첫인사]
 ---
 
-에... 뭐 누구나 쓰는 그런 첫인사 글입니다. 
+안녕하세요. 정치꾼 **H** 입니다.
 
-여기는 뭐하는 블로그냐면... 
+누구나 쓰는 그런 첫인사 글입니다. 
 
-제 넋두리 적는 곳이에요.
+여기는 뭐하는 블로그냐면 세상에서 벌어지는 일들에 대해 논해보는 곳입니다.
 
-당신들이 할일은 그냥 제 독백을 보고 그런갑다 하면 됩니다.
+당신들이 할일은 그냥 받아들이는 것입니다. 나중에 댓글 달 수 있게 해줄게요.
