feat: 윤석열 계엄령에 관해 ...

--- a/blog/2024-12-05-welcome/index.mdx
+++ b/blog/2024-12-05-welcome/index.mdx
@@ -3,11 +3,12 @@ slug: welcome
 title: 주인장의 첫인사
 authors: [H]
 tags: [첫인사]
+date: 2024-12-05
 ---
 
 안녕하세요. 정치꾼 **H** 입니다.
 
-누구나 쓰는 그런 첫인사 글입니다. 
+누구나 쓰는 그런 첫인사 글입니다.
 
 여기는 뭐하는 블로그냐면 세상에서 벌어지는 일들에 대해 논해보는 곳입니다.
 
