--- a/blog/2024-12-05-welcome/index.mdx
+++ b/blog/2024-12-05-welcome/index.mdx
@@ -7,10 +7,12 @@ date: 2024-12-05
 comments: true
 ---
 
-안녕하세요. 세상꾼 **H** 입니다.
+안녕하세요. **세상꾼 H** 입니다.
 
 누구나 쓰는 그런 첫인사 글입니다.
 
 여기는 뭐하는 블로그냐면 세상에서 벌어지는 일들에 대해 논해보는 곳입니다.
 
-당신들이 할일은 그냥 받아들이는 것입니다. 나중에 댓글 달 수 있게 해줄게요.
+당신들이 할일은 그냥 받아들이는 것입니다. ~~나중에 댓글 달 수 있게 해줄게요.~~(해줬어요.)
+
+
