--- a/blog/2024-12-08-martial-law/index.mdx
+++ b/blog/2024-12-08-martial-law/index.mdx
@@ -7,7 +7,7 @@ date: 2024-12-08
 comments: true
 ---
 
-**2024년 12월 3일 윤석열 대통령이 계엄령을 선포했다.**
+2024년 12월 3일 윤석열 대통령이 계엄령을 선포했다.
 
 계엄령이란 무엇이고 왜 현 대통령은 계엄령을 선포했는가?
 
