--- a/blog/2024-12-08-martial-law/index.mdx
+++ b/blog/2024-12-08-martial-law/index.mdx
@@ -14,8 +14,7 @@ comments: true
 {/* truncate */}
 
 <iframe
-  width="560"
-  height="315"
+  width="100%" style={{aspectRatio: '16/9'}}
   src="https://www.youtube.com/embed/i16yb_rudDQ?si=K_T5ASB5dtFv2IUx"
   title="YouTube video player"
   frameborder="0"
