--- a/blog/2025-01-05-robot-clean/index.mdx
+++ b/blog/2025-01-05-robot-clean/index.mdx
@@ -14,7 +14,7 @@ comments: true
 <img src="contents/dreame-x50.png" />
 
 <h4 style={{textAlign: 'center'}}>
-    <a href="https://dreametechkorea.com/promotion/x50_ultra" target="_blank" rel="no">월 수입이 좀 되는 사람만 클릭해주세요.</a>
+    <a href="https://dreametechkorea.com/promotion/x50_ultra" target="_blank" rel="no">월 수입이 좀 되는 사람만 여기를 클릭해주세요.</a>
 </h4>
 
 {/* truncate */}
