feat: 2025-02-14 해찬솔원목이야기

--- a/blog/2024-12-14-organizational-culture/index.mdx
+++ b/blog/2024-12-14-organizational-culture/index.mdx
@@ -11,7 +11,7 @@ comments: true
 
 그동안 5곳의 직장을 길든 짧든 다녔다. 내 머릿속에는 이상적인 조직문화란 무엇인가에 대한 고뇌가 생겨났다.
 
-<img src="contents/org.jpg" />
+<img className="rounded-8" src="contents/org.jpg" />
 
 {/* truncate */}
 
