--- a/blog/2025-01-05-robot-clean/index.mdx
+++ b/blog/2025-01-05-robot-clean/index.mdx
@@ -11,7 +11,7 @@ comments: true
 
 2025년 1월 21일부로 안양에서의 5년 자취생활을 마치고 시흥으로 이사를 가게 되었습니다.
 
-<img src="contents/dreame-x50.png" />
+<img className="rounded-8" src="contents/dreame-x50.png" />
 
 <h4 style={{textAlign: 'center'}}>
     <a href="https://dreametechkorea.com/promotion/x50_ultra" target="_blank" rel="no">월 수입이 좀 되는 사람만 여기를 클릭해주세요.</a>
@@ -47,7 +47,7 @@ comments: true
 
 이 글을 작성하는 25년 1월 5일의 오늘날 사전 예약 이벤트를 신청하였어요!
 
-<img src="contents/dreame-x50-promotion.png" />
+<img className="rounded-8" src="contents/dreame-x50-promotion.png" />
 
 자본주의 사회에서는 무언가를 얻어야 할 때, 그에 상응하는 댓가를 당연히 치루어야 한다고 생각해요 ~
 
