--- a/blog/2025-01-19-tesla-fsd/index.mdx
+++ b/blog/2025-01-19-tesla-fsd/index.mdx
@@ -27,19 +27,19 @@ comments: true
 
 ### 국토교통부와 흉기차의 견제
 ---
-<img src="contents/tesla-fsd-prevented.png" />
+<img className="rounded-8" src="contents/tesla-fsd-prevented.png" />
 
-<img src="contents/tesla-fsd-prevented-2.png" />
+<img className="rounded-8" src="contents/tesla-fsd-prevented-2.png" />
 
 ### 택시협회의 견제
 ---
 
-<img src="contents/tesla-fsd-prevented-3.png" />
+<img className="rounded-8" src="contents/tesla-fsd-prevented-3.png" />
 
 ### 흥선대원군의 견제
 ---
 
-<img src="contents/tesla-fsd-prevented-4.png" />
+<img className="rounded-8" src="contents/tesla-fsd-prevented-4.png" />
 
 이상으로 상용화가 불가능한 이유에 대해 알아보았습니다.
 
