--- a/blog/2024-12-08-martial-law/index.mdx
+++ b/blog/2024-12-08-martial-law/index.mdx
@@ -77,7 +77,7 @@ comments: true
 여기에 지난 3월 김용현 경호처장이 역시 충암고 인맥인 여인형 국군방첩사령관을 비롯해 곽종근 육군특수전사령관, 이진우 수도방위사령관을 한남동 공관으로 불러 만났다는 사실이 확인되면서 계엄 사전 준비 의혹을 증폭시켰다.
 이런 야당의 의혹 제기에 당사자인 김용현 국방부장관 후보자는 물론 대통령실까지 격하게 반발했지만 당시 의혹을 받던 이들은 이번 비상계엄 사태의 핵심 인물로 드러난 상태다.
 
-<img src="https://d1lawh9lju1xqd.cloudfront.net/2024/12/06140315-FB22-6218-56ED-UTHX16GHMQWEFK963ZX2.png" />
+<img className="rounded-8" src="https://d1lawh9lju1xqd.cloudfront.net/2024/12/06140315-FB22-6218-56ED-UTHX16GHMQWEFK963ZX2.png" />
 <br />
 <br />
 **“계엄령 선포일 12월 3일에는 어떤 일들이 있었나?”**
